# VirtualSpace

./: README.md  build.gradle  gradlew  settings.gradle
.github/workflows/: build.yml
app/: build.gradle  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/java/com/virtual/app/: VirtualApplication.java
app/src/main/java/com/virtual/app/adapter/: AppAdapter.java  ClonedAppAdapter.java
app/src/main/java/com/virtual/app/receiver/: BootReceiver.java
app/src/main/java/com/virtual/app/service/: VirtualService.java
app/src/main/java/com/virtual/app/ui/: AboutActivity.java  CloneDetailActivity.java  CloneSelectActivity.java  ClonedAppsFragment.java  InstalledAppsFragment.java  MainActivity.java  (+1 more)
app/src/main/java/com/virtual/core/: VirtualCore.java
app/src/main/java/com/virtual/hook/: BinderHook.java  HookManager.java  MethodProxy.java  NetworkFixer.java  WebViewFixer.java
app/src/main/java/com/virtual/util/: Log.java  VirtualLog.java
app/src/main/res/layout/: activity_about.xml  activity_clone_detail.xml  activity_clone_select.xml  activity_main.xml  activity_settings.xml  fragment_app_list.xml  item_app.xml  item_cloned_app.xml
app/src/main/res/menu/: menu_main.xml
app/src/main/res/mipmap-xxhdpi/: ic_launcher_round.xml
app/src/main/res/values/: colors.xml  dimens.xml  strings.xml  themes.xml
app/src/main/res/xml/: file_paths.xml
hook/: build.gradle
hook/src/main/cpp/: CMakeLists.txt  hook_impl.c  hook_utils.h  native_hook.cpp
hook/src/main/java/com/virtual/hook/: BinderHook.java  NetworkFixer.java  WebViewFixer.java
(+16 files in other folders)
